本番環境でのエラー解消

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -41,19 +41,19 @@
         <div class="row pt-4">
           <div class="col-md-3 offset-1">
               <%= link_to area_path(area: 0) do %>
-              <%= image_tag 'hokkaido', size: "90x60" %>
+              <%= image_tag asset_path('hokkaido.jpg'), size: "90x60" %>
                     北海道
                    <% end %> 
            </div>
            <div class="col-md-3">
              <%= link_to area_path(area: 12) do %>
-              <%= image_tag 'tokyo', size: "90x60" %>
+              <%= image_tag asset_path('tokyo.jpg'), size: "90x60" %>
                     東京
                     <% end %> 
            </div>
            <div class="col-md-3">
              <%= link_to area_path(area: 13) do %>
-              <%= image_tag 'yokohama', size: "90x60" %>
+              <%= image_tag asset_path('yokohama.jpg'), size: "90x60" %>
                     神奈川
                     <% end %> 
            </div>
@@ -61,19 +61,19 @@
         <div class="row pt-4">
          <div class="col-md-3 offset-1">
            <%= link_to area_path(area: 22) do %>
-            <%= image_tag 'nagoya', size: "90x60" %>
+            <%= image_tag asset_path('nagoya.jpg'), size: "90x60" %>
                   愛知
                   <% end %> 
          </div>
          <div class="col-md-3">
            <%= link_to area_path(area: 26) do %>
-            <%= image_tag 'osaka', size: "90x60" %>
+            <%= image_tag asset_path('osaka.jpg'), size: "90x60" %>
                   大阪
                   <% end %> 
          </div>
          <div class="col-md-3">
            <%= link_to area_path(area: 39) do %>
-            <%= image_tag 'hukuoka', size: "90x60" %>
+            <%= image_tag asset_path('hukuoka.jpg'), size: "90x60" %>
                   福岡
                   <% end %> 
          </div>
