--- a/app/views/admin/institutions/show.html.erb
+++ b/app/views/admin/institutions/show.html.erb
@@ -103,7 +103,7 @@
                           <% end %>
                             <% else %>
                               <div class="col-md-4">
-                                <%= image_tag 'no_image', size: "200x200" %>
+                                <%= image_tag asset_path('no_immages.jpg'), size: "200x200" %>
                               </div>
                               <% end %>
                     </div>
