--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -42,7 +42,7 @@
                 <% if bookmark.institution.images.attached? %>
                   <%= image_tag bookmark.institution.images.first, size: "60x60" %>
                     <% else %>
-                      <%= image_tag 'no.images', size: "60x60" %>
+                      <%= image_tag asset_path('no_immages.jpg'), size: "60x60" %>
                         <% end %>
                           <% end %>
                             <% end %>
