--- a/app/views/public/institutions/food.html.erb
+++ b/app/views/public/institutions/food.html.erb
@@ -114,7 +114,7 @@
                   <% end %>
                 <% else %>
                   <div class="col-md-4">
-                    <%= image_tag asset_path('no_immages.jpg'), size: "200x200" %>
+                    <%= image_tag asset_path('no_images.jpg'), size: "200x200" %>
                   </div>
                 <% end %>
               </div>
