--- a/app/views/public/institutions/trip.html.erb
+++ b/app/views/public/institutions/trip.html.erb
@@ -115,7 +115,7 @@
                   <% end %>
                 <% else %>
                   <div class="col-md-4">
-                    <%= image_tag asset_path('no_images.jpg'), size: "200x200" %>
+                    <%= image_tag asset_path('no.images.jpg'), size: "200x200" %>
                   </div>
                 <% end %>
               </div>
