--- a/app/views/public/institutions/index.html.erb
+++ b/app/views/public/institutions/index.html.erb
@@ -48,7 +48,7 @@
                 <% if institution.images.attached? %>
                   <%= image_tag institution.images.first, size: "120x120" %>
                     <% else %>
-                      <%= image_tag asset_path('no_images.jpg'), size: "120x120" %>
+                      <%= image_tag asset_path('no.images.jpg'), size: "120x120" %>
                         <% end %>
                           <% end %>
             </td>
