--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
   <div class="jumbotron jumbotron-fluid bg_header">
     <div class="container">
       <h1 class="display-4">saunavi</h1>
-      <p class="lead">サウナ好きのサウナ好きのためのサイト</p>
+      <p class="lead">サウナ好きによるサウナ好きのためのサイト</p>
     </div>
   </div>
   <div>
@@ -135,10 +135,10 @@
                                   <% end %>
                             </h4>
                 </th>
-                <th><span id="star-rate-<%= review.id %>"></span>
+                <th><span id="star-rate-new-<%= review.id %>"></span>
                   <script>
-                    var elm = document.getElementById("star-rate-<%= review.id %>")
-                    $("#star-rate-<%= review.id %>").empty();
+                    var elm = document.getElementById("star-rate-new-<%= review.id %>")
+                    $("#star-rate-new-<%= review.id %>").empty();
                     var opt = {
                       size: 36,
                       starOff: "<%= asset_path('star-off.png') %>",
