--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,5 +1,15 @@
 <div class="container pb-5">
   <div class="row pt-5">
+    <% if @user.errors.any? %>
+        <%= @user.errors.count %>件のエラーが発生しました
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li>
+                <%= message %>
+              </li>
+              <% end %>
+          </ul>
+          <% end %>
     <div class="offset-sm-3 col-sm-6 pb-5">
       <h4 class="mb-5"><span style="background-color:#eeeeee">会員情報編集</span></h4>
       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
