--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,12 +1,31 @@
 <div class="container">
-  <div class="row pt-5">
-    <div class="mx-auto">
-      <h1>さうなびとは?</h1>
+  <div class="border rounded p-4 mt-4 mr-4">
+    <div class="row pt-2">
+      <div class="mx-auto">
+        <h1><span style="background-color:#eeeeee">さうなびとは?</span></h1>
+      </div>
     </div>
-  </div>
-  <div class="row pt-5">
-    <div class="mx-auto">
-      <h4 class="pt-2"> さうなびとは、サウナ好きが、サウナ好きのためにサウナの情報を共有するサウナレビューサイトです。 まだ知られていない施設、登録されていない施設などを登録し、サウナ好きが、「このようなサウナだっ た！」とレビューを投稿し、皆様のサウナライフを豊かにするようなサイトを目指しています。 </h4>
+    <div class="row mt-5">
+      <div class="mx-auto">
+        <h4 class="pt-2"> さうなびとは、サウナ好きが、サウナ好きのためにサウナの情報を共有するサウナレビューサイトです。 まだ知られていない施設、登録されていない施設などを登録し、サウナ好きが、「このようなサウナだっ た！」とレビューを投稿し、皆様のサウナライフを豊かにするようなサイトを目指しています。 </h4>
+      </div>
     </div>
-  </div>
+  </div>  
+  <div class="row mt-5">
+      <div class="border rounded p-4 mt-4 mr-4">
+        <div class="m-4">
+          <div class="offset-4">
+            <h1 class="mb-5"><span style="background-color:#eeeeee">さうなびの使い方  </span></h1>
+          </div>  
+          さうなびでは、施設ごとのサ活、サ食、サ旅を見ることができます。
+          エリア、キーワードで気になるサウナを探し、サウナレビュー見ましょう。
+          サウナレビューを投稿するには、会員登録が必要です。
+          まずは会員登録をして、自分のサ活を投稿してみましょう。
+          <div class="offset-4 mt-5">
+            <%= link_to "ログイン", user_session_path, class: "btn btn-success ml-5" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "btn btn-danger ml-5" %>
+          </div>
+        </div>
+      </div>
+  </div>    
 </div>
