--- a/app/views/admin/institutions/index.html.erb
+++ b/app/views/admin/institutions/index.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="row mt-4">
     <div class="col-md-5 offset-md-1">
+      <!--検索機能-->
       <div class="post_search">
         <%= form_with url: admin_search_path, method: :get, local: true do |f| %>
           <div class="input-group mb-3">
@@ -15,6 +16,7 @@
           <% end %>
       </div>
     </div>
+    <!--サウナindex-->
     <div class="col-md-11">
       <h2>サウナ一覧</h2>
       <table class="table">
@@ -41,6 +43,7 @@
                   <% end %>
             </td>
             <td>
+              <!--星機能-->
               <h3><span id="star-rate-<%= institution.id %>"></span>
                 <script>
                   var elm = document.getElementById("star-rate-<%= institution.id %>")
