--- a/app/views/public/institutions/area.html.erb
+++ b/app/views/public/institutions/area.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="row pt-4">
     <div class="col-md-3 offset-md-1">
+      <!--キーワード検索機能-->
       <div class="post_search">
         <%= form_with url: search_path, method: :get, local: true do |f| %>
           <div class="input-group mb-3">
@@ -16,6 +17,7 @@
       </div>
     </div>
     <div class="col-md-3">
+      <!--エリア検索機能-->
       <div class="area_search">
         <%= form_with url: area_path, method: :get, local: true do |f| %>
           <div class="input-group mb-3">
@@ -27,6 +29,7 @@
           <% end %>
       </div>
     </div>
+    <!--ソート機能(同じエリアで表示）-->
     <div class="col-md-5"> 並び替え|
       <%= link_to '評価の高い順', area_path(star_count: "true",area: params[:area]) %>|
         <%= link_to 'レビュー順', area_path(review: "true",area: params[:area]) %>|
