--- a/app/views/admin/institutions/search.html.erb
+++ b/app/views/admin/institutions/search.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row pt-5">
     <h2>
+      <!--検索したキーワード表示-->
       <%= @section_title %>
     </h2>
     <div class="col-md-11">
