--- a/app/views/admin/institutions/show.html.erb
+++ b/app/views/admin/institutions/show.html.erb
@@ -16,6 +16,7 @@
             <h1>
               <%= @institution.name %>
             </h1>
+            <!--施設の平均評価点-->
             <h3><span id="star-rate-<%= @institution.id %>"></span>
               <script>
                 var elm = document.getElementById("star-rate-<%= @institution.id %>")
@@ -44,6 +45,7 @@
           <th colspan='3'>
             <div class="row">
               <div class="col-md-8">
+                <!--施設のレビュー-->
                 <h2> レビュー一覧 </h2>
               </div>
             </div>
