--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -31,6 +31,7 @@
                 <%= user.email %>
               </td>
               <td>
+                <!--会員が退会しているかの表示-->
                 <% if user.is_deleted == false %>
                   <p class="text-success font-weight-bold">有効</p>
                 <% else %>
