--- a/app/views/public/institutions/show.html.erb
+++ b/app/views/public/institutions/show.html.erb
@@ -58,24 +58,25 @@
            <th colspan='3'>
             <div class="row">
                <div class="col-md-4">
-             <h2>
-              <%= link_to  institution_path(@institution), class: "btn btn-outline-white btn-block border-bottom" do  %> サ活
-                <% end %>
-              </h2>
-              </div>
-           <div class="col-md-4">
-            <h2>
-              <%= link_to  institution_food_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ食
-                <% end %>
-            </h2> 
-            </div>
-           <div class="col-md-4">
-              <h2>
-                <%= link_to  institution_trip_path(@institution), class:  "btn btn-outline-white btn-block" do  %> サ旅
+                 <!----サ活、サ食、サ旅で表示している箇所に下線-->
+                <h2>
+                <%= link_to  institution_path(@institution), class: "btn btn-outline-white btn-block border-bottom" do  %> サ活
                   <% end %>
-              </h2>
-            </div>  
+                </h2>
               </div>
+              <div class="col-md-4">
+              <h2>
+                <%= link_to  institution_food_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ食
+                  <% end %>
+              </h2> 
+              </div>
+              <div class="col-md-4">
+                <h2>
+                  <%= link_to  institution_trip_path(@institution), class:  "btn btn-outline-white btn-block" do  %> サ旅
+                    <% end %>
+                </h2>
+              </div>  
+            </div>
           </th>
         </tr>
         <% @institution.reviews.each do |review| %>
