--- a/app/views/public/institutions/trip.html.erb
+++ b/app/views/public/institutions/trip.html.erb
@@ -57,25 +57,26 @@
         <tr>
           <th colspan='3'>
             <div class="row">
-               <div class="col-md-4">
-             <h2>
-              <%= link_to  institution_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ活
-                <% end %>
-              </h2>
+              <div class="col-md-4">
+                 <!----サ活、サ食、サ旅で表示している箇所に下線-->
+                 <h2>
+                  <%= link_to  institution_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ活
+                    <% end %>
+                  </h2>
               </div>
-           <div class="col-md-4">
-            <h2>
-              <%= link_to  institution_food_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ食
-                <% end %>
-            </h2> 
+              <div class="col-md-4">
+                <h2>
+                  <%= link_to  institution_food_path(@institution), class: "btn btn-outline-white btn-block" do  %> サ食
+                    <% end %>
+                </h2> 
+              </div>
+              <div class="col-md-4">
+                  <h2>
+                    <%= link_to  institution_trip_path(@institution), class:  "btn btn-outline-white btn-block border-bottom" do  %> サ旅
+                      <% end %>
+                  </h2>
+              </div>  
             </div>
-           <div class="col-md-4">
-              <h2>
-                <%= link_to  institution_trip_path(@institution), class:  "btn btn-outline-white btn-block border-bottom" do  %> サ旅
-                  <% end %>
-              </h2>
-            </div>  
-              </div>
           </th>
         </tr>
         <tr>
