--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="container pb-5">
   <div class="row pt-5">
+    <!--エラーメッセージ-->
     <% if @user.errors.any? %>
         <%= @user.errors.count %>件のエラーが発生しました
           <ul>
@@ -12,6 +13,7 @@
           <% end %>
     <div class="offset-sm-2 col-sm-8 pb-5">
       <h4 class="mb-5"><span style="background-color:#eeeeee">会員情報編集</span></h4>
+      <!--会員情報編集フォーム-->
       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
         <div class="form-group row">
           <%= f.label :nickname, 'ニックネーム', class: "col-sm-2 col-form-label" %>
