--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -108,7 +108,7 @@
                                 <%= comment.user.nickname %>
                                   <%= comment.created_at.strftime('%m/%d %H:%M') %>
                                   <!--管理者としてコメントを削除できるようにする-->
-                                  <%= link_to 'コメント削除', admin_comment_path(@review,comment.id), method: :delete, "data-confirm" => "本当に消しますか？", class: 'btn btn-danger px-2' %>
+                                  <%= link_to 'コメント削除', admin_review_comment_path(@review,comment.id), method: :delete, "data-confirm" => "本当に消しますか？", class: 'btn btn-danger px-2' %>
                                     </br>
                                     <%= comment.text %>
                                       </br>
