共通レイアウトリファクタリング

--- a/app/views/public/institutions/show.html.erb
+++ b/app/views/public/institutions/show.html.erb
@@ -116,81 +116,7 @@
               <%= review.comments.count %>コメント
             </th>
             <% end %>
-              <table>
-          <tr>
-            <td>
-              
-                <div class="container py-5">
-                    <h4><span class="bg-light text-secondary px-3">施設写真</span></h4>
-                </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="row">
-                <% if @institution.images.attached? %>
-                  <% @institution.images.each do |image| %>
-                    <div class="col-md-4">
-                    <%= image_tag image,width:"100%" %>
-                    </div>
-                  <% end %>
-                <% else %>
-                  <div class="col-md-4">
-                    <%= image_tag asset_path('no.images.jpg'), size: "200x200" %>
-                  </div>
-                <% end %>
-              </div>
-            </td>
-          </tr>
-        </table>
-      <div class="container py-5">
-        <h4><span class="bg-light text-secondary px-3">施設基本情報</span></h4>
-      </div>
-      <table class="table table-bordered col-15">
-        <tbody>
-          <tr>
-            <td class="bg-light">施設名</td>
-            <td>
-              <%= @institution.name %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">住所</td>
-            <td>
-              <%= @institution.address %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">営業時間</td>
-            <td>
-              <%= @institution.start_time.strftime( "%H:%M" ) %>〜
-                <%= @institution.finish_time.strftime( "%H:%M" ) %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">基本料金</td>
-            <td>
-              <%= @institution.price %>円</td>
-          </tr>
-          <tr>
-            <td class="bg-light">ホームページ</td>
-            <td>
-              <%= @institution.link %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">電話番号</td>
-            <td>
-              <%= @institution.telephone_number %>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-light">基本情報</td>
-            <td>
-              <%= @institution.introduction %>
-            </td>
-          </tr>
-      </table>
+        <%= render 'list', institution: @institution %>
       </br>
     </div>
   </div>
